# ikaros

./: .gitignore
Source/UserModules/: CMakeLists.txt  WallEAI-noface.ikc  WallEAI.ikc  WallEAI_testDOC.ikc  testRGB.ikc  testWallE_AI1.ikc
Source/UserModules/AverageMatrixValue/: AverageMatrixValue.cc  AverageMatrixValue.h  AverageMatrixValue.ikc  CMakeLists.txt
Source/UserModules/BuildingArea/: BuildingArea.cc  BuildingArea.h  BuildingArea.ikc  CMakeLists.txt  MarkToWorld.ikc.backup
Source/UserModules/ConstantOutput/: CMakeLists.txt  ConstantOutput.cc  ConstantOutput.h  ConstantOutput.ikc
Source/UserModules/CxQ/: ranrotw.cpp
Source/UserModules/DepthSeg/: CMakeLists.txt  DepthSeg.cc  DepthSeg.h  DepthSeg.ikc
Source/UserModules/DirectionOfChange/: CMakeLists.txt  DirectionOfChange.cc  DirectionOfChange.h  DirectionOfChange.ikc
Source/UserModules/FaceLocation/: CMakeLists.txt  FaceLocation.cc  FaceLocation.h  FaceLocation.ikc
Source/UserModules/FocusSelector/: CMakeLists.txt  FocusSelector.cc  FocusSelector.h  FocusSelector.ikc
Source/UserModules/FocusSelector2/: CMakeLists.txt  FocusSelector2.cc  FocusSelector2.h  FocusSelector2.ikc
Source/UserModules/FocusSelector3/: CMakeLists.txt  FocusSelector3.cc  FocusSelector3.h  FocusSelector3.ikc
Source/UserModules/FocusSelectorNoFace/: CMakeLists.txt  FocusSelectorNoFace.cc  FocusSelectorNoFace.h  FocusSelectorNoFace.ikc
Source/UserModules/LogicModelModule/: CMakeLists.txt  LogicModelModule.cc  LogicModelModule.h  LogicModelModule.ikc
Source/UserModules/MarkToWorld/: CMakeLists.txt  MarkToWorld.cc  (+2 more)
(+109 files in other folders)
