set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(MinimalModule)
add_subdirectory(MyModule)
add_subdirectory(FaceLocation)
add_subdirectory(LogicModelModule)
add_subdirectory(MarkToWorld)
add_subdirectory(AverageMatrixValue)
add_subdirectory(FocusSelector)
add_subdirectory(DepthSeg)
add_subdirectory(BuildingArea)
add_subdirectory(SummedBoxes)
add_subdirectory(DirectionOfChange)
add_subdirectory(ConstantOutput)
add_subdirectory(FocusSelector2)
add_subdirectory(SmoothMovement)
add_subdirectory(FocusSelectorNoFace)

set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)